# vn-save-manager

./: README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  main.rs  screenshot.rs  snapshot.rs  watcher.rs
src/components/: AddGameModal.tsx  ConfirmDialog.tsx  EditGameModal.tsx  GameList.tsx  ScreenshotDetail.tsx  ScreenshotList.tsx  SnapshotDetail.tsx  SnapshotList.tsx  Toast.tsx
