[package]
name = "vn-save-manager"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "vn_save_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6.1"
rusqlite = { version = "0.31", features = ["bundled"] }
screenshots = "0.8"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
directories = "5.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
thiserror = "1.0"
image = { version = "0.25", default-features = true }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Graphics_Gdi",
    "Win32_System_ProcessStatus",
] }
global-hotkey = "0.5"
